patrol points in cpp

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -30,6 +30,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPerson",NewGameName="/Script/TestingGroundsFPS")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/TestingGroundsFPS")
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/TestingGroundsFPS")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/TestingGroundsFPS")
++ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/TestingGroundsFPS")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="TestingGroundsFPSProjectile")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonHUD",NewClassName="TestingGroundsFPSHUD")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="TestingGroundsFPSGameMode")
